chore: migrated to small maven project